@@ -94,6 +94,10 @@ CVS code -
   do_first_line(), do_last_line()
 	- Simplify by only using edit_redraw(), and also make them call
 	  check_statusblank(). (DLR)
+  do_para_begin(), do_para_begin_void(), do_para_end(),
+  do_para_end_void()
+	- Move here from nano.c, as they're movement functions, and also
+	  make them call check_statusblank().
   do_page_up(), do_page_down()
 	- If there's less than a page of text onscreen, just call
 	  do_(first|last)_line(). (DLR)
